Extra Graph ipynb added, removed testing files

--- a/PyBer_Challenge_ExtraGraphs.ipynb
+++ b/PyBer_Challenge_ExtraGraphs.ipynb
@@ -621,7 +621,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
